Updated NetisHR files

--- a/netishr/index.html
+++ b/netishr/index.html
@@ -56,7 +56,7 @@
                              </span> <span class="text-muted text-xs block">HR Admin <b class="caret"></b></span> </span>
                             </a>
                             <ul class="dropdown-menu animated fadeInRight m-t-xs">
-                                <li><a href="profile.html">Profile</a></li>
+                                <li><a href="myprofile.html">Profile</a></li>
                                 <li><a href="myaccount.html">Account</a></li>
                                 <li><a href="mysettings.html">Settings</a></li>
                                 <li class="divider"></li>
@@ -115,7 +115,8 @@
                     <li>
                         <a href="#"><i class="fa fa-user"></i> <span class="nav-label">Person</span><span class="fa arrow"></span></a>
                         <ul class="nav nav-second-level  ">
-                            <li><a href="persons.html">Staffs</a></li>
+                            <li><a href="persons_staffs.html">Staffs</a></li>
+                            <li><a href="persons_applicants.html">Applicants</a></li>
                         </ul>
                     </li>
                     <li>
@@ -357,7 +358,7 @@
                                 <li>
                                     <div class="text-center link-block">
                                         <a href="notifications.html">
-                                            <strong>See All Alerts</strong>
+                                            <strong>See All Notifications</strong>
                                             <i class="fa fa-angle-right"></i>
                                         </a>
                                     </div>
@@ -365,17 +366,14 @@
                             </ul>
                         </li>
 
-
-                        <li>
-                            <a href="login.html">
-                                <i class="fa fa-sign-out"></i> Log out
-                            </a>
-                        </li>
+                        <!--
                         <li>
                             <a class="right-sidebar-toggle">
                                 <i class="fa fa-tasks"></i>
                             </a>
                         </li>
+-->
+
                     </ul>
 
                 </nav>
@@ -595,6 +593,7 @@
 
         </a>
     </div>
+    <!--
     <div id="right-sidebar" class="animated">
         <div class="sidebar-container">
 
@@ -834,138 +833,139 @@
                                 <span class="label label-primary pull-right">NEW</span>
                                 <h4>The generated</h4>
                                 <!--<div class="small pull-right m-t-xs">9 hours ago</div>-->
-                                There are many variations of passages of Lorem Ipsum available.
-                                <div class="small">Completion with: 22%</div>
-                                <div class="small text-muted m-t-xs">Project end: 4:00 pm - 12.06.2014</div>
-                            </a>
-                        </li>
+    There are many variations of passages of Lorem Ipsum available.
+    <div class="small">Completion with: 22%</div>
+    <div class="small text-muted m-t-xs">Project end: 4:00 pm - 12.06.2014</div>
+    </a>
+    </li>
 
-                    </ul>
+    </ul>
 
-                </div>
+    </div>
 
-                <div id="tab-3" class="tab-pane">
+    <div id="tab-3" class="tab-pane">
 
-                    <div class="sidebar-title">
-                        <h3><i class="fa fa-gears"></i> Settings</h3>
-                        <small><i class="fa fa-tim"></i> You have 14 projects. 10 not completed.</small>
-                    </div>
-
-                    <div class="setings-item">
-                        <span>
-                        Show notifications
-                    </span>
-                        <div class="switch">
-                            <div class="onoffswitch">
-                                <input type="checkbox" name="collapsemenu" class="onoffswitch-checkbox" id="example">
-                                <label class="onoffswitch-label" for="example">
-                                    <span class="onoffswitch-inner"></span>
-                                    <span class="onoffswitch-switch"></span>
-                                </label>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="setings-item">
-                        <span>
-                        Disable Chat
-                    </span>
-                        <div class="switch">
-                            <div class="onoffswitch">
-                                <input type="checkbox" name="collapsemenu" checked class="onoffswitch-checkbox" id="example2">
-                                <label class="onoffswitch-label" for="example2">
-                                    <span class="onoffswitch-inner"></span>
-                                    <span class="onoffswitch-switch"></span>
-                                </label>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="setings-item">
-                        <span>
-                        Enable history
-                    </span>
-                        <div class="switch">
-                            <div class="onoffswitch">
-                                <input type="checkbox" name="collapsemenu" class="onoffswitch-checkbox" id="example3">
-                                <label class="onoffswitch-label" for="example3">
-                                    <span class="onoffswitch-inner"></span>
-                                    <span class="onoffswitch-switch"></span>
-                                </label>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="setings-item">
-                        <span>
-                        Show charts
-                    </span>
-                        <div class="switch">
-                            <div class="onoffswitch">
-                                <input type="checkbox" name="collapsemenu" class="onoffswitch-checkbox" id="example4">
-                                <label class="onoffswitch-label" for="example4">
-                                    <span class="onoffswitch-inner"></span>
-                                    <span class="onoffswitch-switch"></span>
-                                </label>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="setings-item">
-                        <span>
-                        Offline users
-                    </span>
-                        <div class="switch">
-                            <div class="onoffswitch">
-                                <input type="checkbox" checked name="collapsemenu" class="onoffswitch-checkbox" id="example5">
-                                <label class="onoffswitch-label" for="example5">
-                                    <span class="onoffswitch-inner"></span>
-                                    <span class="onoffswitch-switch"></span>
-                                </label>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="setings-item">
-                        <span>
-                        Global search
-                    </span>
-                        <div class="switch">
-                            <div class="onoffswitch">
-                                <input type="checkbox" checked name="collapsemenu" class="onoffswitch-checkbox" id="example6">
-                                <label class="onoffswitch-label" for="example6">
-                                    <span class="onoffswitch-inner"></span>
-                                    <span class="onoffswitch-switch"></span>
-                                </label>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="setings-item">
-                        <span>
-                        Update everyday
-                    </span>
-                        <div class="switch">
-                            <div class="onoffswitch">
-                                <input type="checkbox" name="collapsemenu" class="onoffswitch-checkbox" id="example7">
-                                <label class="onoffswitch-label" for="example7">
-                                    <span class="onoffswitch-inner"></span>
-                                    <span class="onoffswitch-switch"></span>
-                                </label>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="sidebar-content">
-                        <h4>Settings</h4>
-                        <div class="small">
-                            I belive that. Lorem Ipsum is simply dummy text of the printing and typesetting industry. And typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s. Over the years, sometimes by accident, sometimes on purpose (injected humour and the like).
-                        </div>
-                    </div>
-
-                </div>
-            </div>
-
+        <div class="sidebar-title">
+            <h3><i class="fa fa-gears"></i> Settings</h3>
+            <small><i class="fa fa-tim"></i> You have 14 projects. 10 not completed.</small>
         </div>
 
+        <div class="setings-item">
+            <span>
+                        Show notifications
+                    </span>
+            <div class="switch">
+                <div class="onoffswitch">
+                    <input type="checkbox" name="collapsemenu" class="onoffswitch-checkbox" id="example">
+                    <label class="onoffswitch-label" for="example">
+                        <span class="onoffswitch-inner"></span>
+                        <span class="onoffswitch-switch"></span>
+                    </label>
+                </div>
+            </div>
+        </div>
+        <div class="setings-item">
+            <span>
+                        Disable Chat
+                    </span>
+            <div class="switch">
+                <div class="onoffswitch">
+                    <input type="checkbox" name="collapsemenu" checked class="onoffswitch-checkbox" id="example2">
+                    <label class="onoffswitch-label" for="example2">
+                        <span class="onoffswitch-inner"></span>
+                        <span class="onoffswitch-switch"></span>
+                    </label>
+                </div>
+            </div>
+        </div>
+        <div class="setings-item">
+            <span>
+                        Enable history
+                    </span>
+            <div class="switch">
+                <div class="onoffswitch">
+                    <input type="checkbox" name="collapsemenu" class="onoffswitch-checkbox" id="example3">
+                    <label class="onoffswitch-label" for="example3">
+                        <span class="onoffswitch-inner"></span>
+                        <span class="onoffswitch-switch"></span>
+                    </label>
+                </div>
+            </div>
+        </div>
+        <div class="setings-item">
+            <span>
+                        Show charts
+                    </span>
+            <div class="switch">
+                <div class="onoffswitch">
+                    <input type="checkbox" name="collapsemenu" class="onoffswitch-checkbox" id="example4">
+                    <label class="onoffswitch-label" for="example4">
+                        <span class="onoffswitch-inner"></span>
+                        <span class="onoffswitch-switch"></span>
+                    </label>
+                </div>
+            </div>
+        </div>
+        <div class="setings-item">
+            <span>
+                        Offline users
+                    </span>
+            <div class="switch">
+                <div class="onoffswitch">
+                    <input type="checkbox" checked name="collapsemenu" class="onoffswitch-checkbox" id="example5">
+                    <label class="onoffswitch-label" for="example5">
+                        <span class="onoffswitch-inner"></span>
+                        <span class="onoffswitch-switch"></span>
+                    </label>
+                </div>
+            </div>
+        </div>
+        <div class="setings-item">
+            <span>
+                        Global search
+                    </span>
+            <div class="switch">
+                <div class="onoffswitch">
+                    <input type="checkbox" checked name="collapsemenu" class="onoffswitch-checkbox" id="example6">
+                    <label class="onoffswitch-label" for="example6">
+                        <span class="onoffswitch-inner"></span>
+                        <span class="onoffswitch-switch"></span>
+                    </label>
+                </div>
+            </div>
+        </div>
+        <div class="setings-item">
+            <span>
+                        Update everyday
+                    </span>
+            <div class="switch">
+                <div class="onoffswitch">
+                    <input type="checkbox" name="collapsemenu" class="onoffswitch-checkbox" id="example7">
+                    <label class="onoffswitch-label" for="example7">
+                        <span class="onoffswitch-inner"></span>
+                        <span class="onoffswitch-switch"></span>
+                    </label>
+                </div>
+            </div>
+        </div>
 
+        <div class="sidebar-content">
+            <h4>Settings</h4>
+            <div class="small">
+                I belive that. Lorem Ipsum is simply dummy text of the printing and typesetting industry. And typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s. Over the years, sometimes by accident, sometimes on purpose (injected humour and the like).
+            </div>
+        </div>
 
     </div>
     </div>
+
+    </div>
+
+
+
+    </div>
+    -->
+
 
     <!-- Mainly scripts -->
     <script src="js/jquery-2.1.1.js"></script>
