--- a/netishr/myaccount.html
+++ b/netishr/myaccount.html
@@ -448,14 +448,22 @@
                             </div>
                             <div class="ibox-content">
                                 <form class="form-horizontal">
-                                    <p>Your email address is also your login username. To authorise this change you need to verify your password even though you are already logged in.</p>
+                                    <p>Your email address is also your login username. To authorise this change you need to enter email address twice, and then verify your password even though you are already logged in.</p>
                                     <div class="form-group">
                                         <label class="col-lg-2 control-label">Email</label>
 
                                         <div class="col-lg-10">
-                                            <input type="email" placeholder="arnold.siboro@netikaindonesia.com" class="form-control">
+                                            <input type="email" placeholder="Enter your new email address" class="form-control">
                                         </div>
                                     </div>
+                                    <div class="form-group">
+                                        <label class="col-lg-2 control-label">Confirm email</label>
+
+                                        <div class="col-lg-10">
+                                            <input type="email" placeholder="Enter again the same email address" class="form-control">
+                                        </div>
+                                    </div>
+
                                     <div class="form-group">
                                         <label class="col-lg-2 control-label">Password</label>
 
