Updated NetisHR files

--- a/netishr/administrator.html
+++ b/netishr/administrator.html
@@ -32,7 +32,7 @@
 
 <body>
     <div id="wrapper">
-                <nav class="navbar-default navbar-static-side" role="navigation">
+        <nav class="navbar-default navbar-static-side" role="navigation">
             <div class="sidebar-collapse">
                 <ul class="nav metismenu" id="side-menu">
                     <li class="nav-header">
@@ -451,7 +451,7 @@
                                         </div>
                                     </div>
                                     <div class="ibox-content">
-                                        <a href="person_information_settings.html">Persons Information Setting</a>
+                                        <a href="person_information_settings.html">Persons Information</a>
                                         <div class="small">Information configuration for person information</div>
                                         <p></p>
                                         <a href="uploadpersons.html">Upload Persons</a>
