Updated NetisHR files

--- a/netishr/payroll_salary_entry_old.html
+++ b/netishr/payroll_salary_entry_old.html
@@ -115,7 +115,7 @@
                             <li><a href="manpowerplanning.html">Manpower Planning</a></li>
                             <li><a href="recruitmentplanning.html">Recruitment Planning</a></li>
                             <li><a href="selectionprocess.html">Selection Process</a></li>
-                            <li><a href="applicants.html">Applicants</a></li>
+                            <li><a href="persons_applicants.html">Applicants</a></li>
                         </ul>
                     </li>
                     <li>
