--- a/netishr/recruitment_recruitmentplanning.html
+++ b/netishr/recruitment_recruitmentplanning.html
@@ -25,7 +25,7 @@
 
     <div id="wrapper">
 
-                <nav class="navbar-default navbar-static-side" role="navigation">
+        <nav class="navbar-default navbar-static-side" role="navigation">
             <div class="sidebar-collapse">
                 <ul class="nav metismenu" id="side-menu">
                     <li class="nav-header">
@@ -380,11 +380,11 @@
                                             <button type="button" class="btn btn btn-primary"> <i class="fa fa-search"></i> Search</button>
                                      </span>
                                     <div class="col-lg-4 text-right">
-                                        <a href="Selectionprocess.html" class="btn btn-primary">Go to Selection Process</a>
+                                        <a href="recruitment_selectionprocess.html" class="btn btn-primary">Go to Selection Process</a>
                                     </div>
                                 </div>
                                 <br>
-                                <a href="recruitment_detail.html">
+                                <a href="recruitment_recruitmentplanning_new.html">
                                     <button type="button" class="btn btn-primary btn-xs">New Recruitment</button>
                                 </a>
                                 <div class="clients-list">
@@ -402,7 +402,7 @@
                                                                 Recruitment ID
                                                             </th>
                                                             <th>
-                                                                Job Title
+                                                                Job title
                                                             </th>
                                                             <th>
                                                                 Opening
@@ -414,10 +414,10 @@
                                                                 Vacancy type
                                                             </th>
                                                             <th>
-                                                                Number of Required
+                                                                No. of vacancies
                                                             </th>
                                                             <th>
-                                                                Number of Applicant
+                                                                No. of applicants
                                                             </th>
                                                             <th>
                                                                 Action
@@ -435,7 +435,7 @@
                                                                 <td> 20</td>
                                                                 <td>
                                                                     <div class="btn-group">
-                                                                        <a href="recruitment_detail.html">
+                                                                        <a href="recruitment_recruitmentplanning_new.html">
                                                                             <button class="btn-white btn btn-xs">Edit</button>
                                                                         </a>
                                                                         <a href="#">
@@ -454,7 +454,7 @@
                                                                 <td> 20</td>
                                                                 <td>
                                                                     <div class="btn-group">
-                                                                        <a href="recruitment_detail.html">
+                                                                        <a href="recruitment_recruitmentplanning_new.html">
                                                                             <button class="btn-white btn btn-xs">Edit</button>
                                                                         </a>
                                                                         <a href="#">
@@ -473,7 +473,7 @@
                                                                 <td> 20</td>
                                                                 <td>
                                                                     <div class="btn-group">
-                                                                        <a href="recruitment_detail.html">
+                                                                        <a href="recruitment_recruitmentplanning_new.html">
                                                                             <button class="btn-white btn btn-xs">Edit</button>
                                                                         </a>
                                                                         <a href="#">
@@ -492,7 +492,7 @@
                                                                 <td> 20</td>
                                                                 <td>
                                                                     <div class="btn-group">
-                                                                        <a href="recruitment_detail.html">
+                                                                        <a href="recruitment_recruitmentplanning_new.html">
                                                                             <button class="btn-white btn btn-xs">Edit</button>
                                                                         </a>
                                                                         <a href="#">
@@ -511,7 +511,7 @@
                                                                 <td> 20</td>
                                                                 <td>
                                                                     <div class="btn-group">
-                                                                        <a href="recruitment_detail.html">
+                                                                        <a href="recruitment_recruitmentplanning_new.html">
                                                                             <button class="btn-white btn btn-xs">Edit</button>
                                                                         </a>
                                                                         <a href="#">
