--- a/netishr/medicalexpenseformapproval.html
+++ b/netishr/medicalexpenseformapproval.html
@@ -381,7 +381,8 @@
                 <div class="row">
                         <div class="ibox float-e-margins">
                             <div class="ibox-content">
-                                <a href="medicalexpenseformapproval.html"><button type="button" class="btn btn-primary btn">Submit</button></a>
+                                <button type="button" class="btn btn-primary btn">Approve</button>
+                                <button type="button" class="btn btn-warning btn">Reject</button>
                                 <button type="button" class="btn btn-danger btn">Cancel</button>
                                 <div class="row m-t-lg">
 					                <div class="tabs-container">
@@ -407,33 +408,18 @@
 												<div class="form-group">
 													<label class="col-sm-2 control-label">Family Insured</label>
 													<div class="col-sm-10">
-                                                        <div class="radio radio-info radio-inline">
-                                                            <input type="radio" id="inlineRadio1" value="option1" name="radioInline" checked="">
-                                                            <label for="inlineRadio1">Yes</label>
-                                                        </div>
-                                                        <div class="radio radio-inline">
-                                                            <input type="radio" id="inlineRadio2" value="option2" name="radioInline">
-                                                            <label for="inlineRadio2">No</label>
-                                                        </div>
+                                                        Yes
 													</div>
 												</div>
                                             <div class="form-group">
                                                 <label class="col-sm-2 control-label" for="date_added">Family Relation</label>
-
-                                                <div class="col-sm-4">
-                                                    <select data-placeholder="Choose a Family Relation..." class="chosen-select">
-                                                        <option value="0" selected></option>
-                                                        <option value="1">Wife</option>
-                                                        <option value="2">Child</option>
-                                                        <option value="3">Father</option>
-                                                        <option value="4">Mother</option>
-                                                    </select>
-                                                </div>
+													<div class="col-sm-10">
+                                                        Wife
+													</div>
                                             </div>
                                             </fieldset>
                                             <br/>
 					                        <div class="col-lg-10">
-                                                <button type="button" class="btn btn-primary btn-xs" data-toggle="modal" data-target="#adddetail">Add Detail</button>
                                                 <div class="modal inmodal" id="adddetail" tabindex="-1" role="dialog" aria-hidden="true">
                                                     <div class="modal-dialog">
                                                         <div class="modal-content animated bounceInRight">
@@ -479,6 +465,9 @@
                                                                     Item Cost
                                                                 </th>                                                            
                                                                 <th>
+                                                                    Realization
+                                                                </th>                                                            
+                                                                <th>
                                                                     Action
                                                                 </th>                                                            
                                                             </thead>													
@@ -486,6 +475,9 @@
                                                                 <tr>
                                                                     <td> Konsultasi dokter umum </td>
                                                                     <td> 100,000 </td>
+                                                                    <td>
+                                                                        <input type="text" id="status" name="status" value="" placeholder="Realization value" class="form-control">
+                                                                    </td>
                                                                     <td>
                                                                         <div class="btn-group">
                                                                             <button class="btn-white btn btn-xs" data-toggle="modal" data-target="#adddetail">Edit</button>
@@ -497,6 +489,9 @@
                                                                     <td> Rontgen  </td>
                                                                     <td> 60,000 </td>
                                                                     <td>
+                                                                        <input type="text" id="status" name="status" value="" placeholder="Realization value" class="form-control">
+                                                                    </td>
+                                                                    <td>
                                                                         <div class="btn-group">
                                                                             <button class="btn-white btn btn-xs" data-toggle="modal" data-target="#adddetail">Edit</button>
                                                                             <button class="btn-white btn btn-xs">Delete</button>
@@ -507,6 +502,9 @@
                                                                     <td> Obat </td>
                                                                     <td> 800,000 </td>
                                                                     <td>
+                                                                        <input type="text" id="status" name="status" value="" placeholder="Realization value" class="form-control">
+                                                                    </td>
+                                                                    <td>
                                                                         <div class="btn-group">
                                                                             <button class="btn-white btn btn-xs" data-toggle="modal" data-target="#adddetail">Edit</button>
                                                                             <button class="btn-white btn btn-xs">Delete</button>
@@ -516,6 +514,7 @@
                                                                 <tr>
                                                                     <th> Total </th>
                                                                     <th> 960,000 </th>
+                                                                    <th> XXXX </th>
                                                                     <th></th>
                                                                 </tr>                                                            </tbody>
                                                         </table>
@@ -524,6 +523,7 @@
                                             </div>
                                             <br/>
 					                        <div class="col-lg-10">
+                                                <button type="button" class="btn btn-primary btn-xs" data-toggle="modal" data-target="#addattachment">Download Detail</button><br/>
                                                 <button type="button" class="btn btn-primary btn-xs" data-toggle="modal" data-target="#addattachment">Add Attachment</button>
                                                  <div class="modal inmodal" id="addattachment" tabindex="-1" role="dialog" aria-hidden="true">
                                                     <div class="modal-dialog">
