--- a/netishr/login.html
+++ b/netishr/login.html
@@ -29,15 +29,7 @@
                 </p>
 
                 <p>
-                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.
-                </p>
-
-                <p>
-                    When an unknown printer took a galley of type and scrambled it to make a type specimen book.
-                </p>
-
-                <p>
-                    <small>It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</small>
+                    Netis focuses on providing integrated strategic HR functionalities, such as Job/People/Organization/Recrtuiment/Performance/ Remuneration, to empower your organization to attract and/or develop as well as retain the best people and manage the overall workforce.
                 </p>
 
             </div>
@@ -62,7 +54,7 @@
                         <a class="btn btn-sm btn-white btn-block" href="register.html">Create an account</a>
                     </form>
                     <p class="m-t">
-                        <small>NetisHR version 2.0.xxxx &copy; 2016</small>
+                        <small>NetisHR version 2.0.xxxx</small>
                     </p>
                 </div>
             </div>
@@ -73,7 +65,7 @@
                 Copyright Netika Indonesia
             </div>
             <div class="col-md-6 text-right">
-                <small>© 2013-2016</small>
+                <small>© 2013-2017</small>
             </div>
         </div>
     </div>
