--- a/netishr/persons_applicants_profile.html
+++ b/netishr/persons_applicants_profile.html
@@ -367,6 +367,25 @@
                 </div>
             </div>
             <div class="wrapper wrapper-content animated fadeIn">
+                <div class="row m-b-lg m-t-lg">
+                    <div class="col-md-6">
+
+                        <div class="profile-image">
+                            <img src="img/a2.jpg" class="img-circle circle-border m-b-md" alt="profile">
+                        </div>
+                        <div class="profile-info">
+                            <div class="">
+                                <div>
+                                    <h2 class="no-margins">
+                                    Tono Kartono
+                                </h2>
+                                    <h4>Applicant Code : 001</h4>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                
                 <div class="row">
                         <div class="ibox float-e-margins">
                             <div class="ibox-content">
