--- a/netishr/persons_staffs.html
+++ b/netishr/persons_staffs.html
@@ -25,7 +25,7 @@
 
     <div id="wrapper">
 
-                <nav class="navbar-default navbar-static-side" role="navigation">
+        <nav class="navbar-default navbar-static-side" role="navigation">
             <div class="sidebar-collapse">
                 <ul class="nav metismenu" id="side-menu">
                     <li class="nav-header">
@@ -387,6 +387,7 @@
                                 <a href="persons_staffs_profile.html">
                                     <button type="button" class="btn btn-primary btn-xs">New Staff</button>
                                 </a>
+                                <button type="button" class="btn btn-primary btn-xs">Export staffs</button>
                                 <div class="clients-list">
                                     <ul class="nav nav-tabs">
                                         <span class="pull-right small text-muted">16 persons</span>
