Updated NetisHR files

--- a/netishr/index.html
+++ b/netishr/index.html
@@ -196,23 +196,14 @@
                                             </li>
                                         </ul>
                                     </li>
-                                    <li><a href="#">Benefits<span class="fa arrow"></span></a>
+                                    <li>
+                                        <a href="#">Benefits <span class="fa arrow"></span></a>
                                         <ul class="nav nav-fourth-level">
                                             <li>
-                                                <a href="medicalexpense.html">Medical Expense</a>
+                                                <a href="medicalexpense.html">Medical</a>
                                             </li>
                                             <li>
-                                                <a href="medicalexpenseadministration.html">Medical Expense Administration</a>
-                                            </li>
-                                        </ul>
-                                    </li>
-                                    <li><a href="#">Business trips<span class="fa arrow"></span></a>
-                                        <ul class="nav nav-fourth-level">
-                                            <li>
-                                                <a href="bistripsexpense.html">Expense</a>
-                                            </li>
-                                            <li>
-                                                <a href="bistripsexpensesummary.html">Expense Summary</a>
+                                                <a href="bistripsexpense.html">Business trip</a>
                                             </li>
                                         </ul>
                                     </li>
