--- a/netishr/organisation_diagrams.html
+++ b/netishr/organisation_diagrams.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>NetisHR | Tabs </title>
+    <title>NetisHR | Organization Diagrams </title>
 
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="font-awesome/css/font-awesome.css" rel="stylesheet">
@@ -19,7 +19,7 @@
 
     <div id="wrapper">
 
-                <nav class="navbar-default navbar-static-side" role="navigation">
+        <nav class="navbar-default navbar-static-side" role="navigation">
             <div class="sidebar-collapse">
                 <ul class="nav metismenu" id="side-menu">
                     <li class="nav-header">
@@ -349,16 +349,16 @@
             </div>
             <div class="row wrapper border-bottom white-bg page-heading">
                 <div class="col-lg-10">
-                    <h2>Tabs</h2>
+                    <h2>Organization Diagrams</h2>
                     <ol class="breadcrumb">
                         <li>
                             <a href="index.html">Home</a>
                         </li>
                         <li>
-                            <a>UI Elements</a>
+                            <a>Organization</a>
                         </li>
                         <li class="active">
-                            <strong>Tabs</strong>
+                            <strong>Organization Diagrams</strong>
                         </li>
                     </ol>
                 </div>
