--- a/netishr/bistripsexpense.html
+++ b/netishr/bistripsexpense.html
@@ -27,7 +27,7 @@
 
     <div id="wrapper">
 
-                <nav class="navbar-default navbar-static-side" role="navigation">
+        <nav class="navbar-default navbar-static-side" role="navigation">
             <div class="sidebar-collapse">
                 <ul class="nav metismenu" id="side-menu">
                     <li class="nav-header">
@@ -387,7 +387,8 @@
 
                         </div>
                         <div class="ibox-tools">
-                            <a href="bistripexpenseform.html" class="btn btn-primary btn-xs">Create new request</a>
+                            <a href="bistripsexpensesummary.html" class="btn btn-primary btn-xs">Trips summary</a>
+                            <a href="bistripexpenseform.html" class="btn btn-primary btn-xs">New request</a>
                         </div>
                     </div>
                     <div class="ibox-content">
@@ -458,7 +459,7 @@
                                                 <a class="btn btn-xs btn-white"><i class="fa fa-thumbs-down"></i> Reject</a>
                                             </div>
                                         </td>
-                                    </tr>                                
+                                    </tr>
                                     <tr>
                                         <td class="project-status">
                                             <span class="label label-warning">On-going</span>
@@ -479,7 +480,7 @@
                                                 <a class="btn btn-xs btn-white"><i class="fa fa-thumbs-down"></i> Reject</a>
                                             </div>
                                         </td>
-                                    </tr>                                
+                                    </tr>
                                 </tbody>
                             </table>
                         </div>
