--- a/netishr/index.html
+++ b/netishr/index.html
@@ -186,6 +186,9 @@
                                         <a href="mycalendar.html">My Calendar</a>
                                     </li>
                                     <li>
+                                        <a href="Attendance.html">Attendance</a>
+                                    </li>
+                                    <li>
                                         <a href="#">Work Shifts <span class="fa arrow"></span></a>
                                         <ul class="nav nav-fourth-level">
                                             <li>
